# course-support-bot

./: .gitignore  README.md  ai.py  file_processing.py  pyproject.toml  run.py  run_bot.py
app/: __init__.py  admin.py  ai.py  api.py  auth.py  cli.py  config.py  file_processing.py  models.py  routes.py
app/api/: __init__.py  telegram.py
app/bot/: bot.py
app/services/: file_processor.py  gigachat.py  notification_service.py  vector_db.py  vector_search.py
app/templates/: base.html  course.html  index.html  login.html  material.html  notifications.html
app/templates/admin/: courses.html  files.html  index.html  materials.html  users.html
app/templates/auth/: login.html  register.html
app/templates/chat/: index.html
app/templates/course/: index.html  manage_access.html  (+1 more)
attached_assets/: Pasted---1736320202276.txt  Pasted--extends-base-html-block-content-div-class-container-mt-4-h2--1736629575762.txt  Pasted-class-VectorDB-def-init-self-embedding-model-name-sentence-transforme-1736327564245.txt  Pasted-from-flask-import-Blueprint-render-template-redirect-url-for-request-flash-session-from-flask-1736323012196.txt  Pasted-import-os-from-flask-import-Blueprint-render-template-redirect-url-for-request-flash-jsonify--1736629727553.txt  Pasted-import-os-import-logging-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-filters-import-Comm-1736445970220.txt  Pasted-import-os-import-logging-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-filters-import-Comm-1736452707142.txt  file_processing.py  main.py  replit-prompt.md  requirements.txt  vector_db.py
(+1 files in other folders)
